# libconfigfile

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  configuration_file_syntax_specification.md  configuration_file_syntax_specification.txt  configure.ac  main.cpp
include/: array_node.hpp  array_value_node.hpp  bits-and-bytes  character_constants.hpp  color.hpp  config.hpp  constexpr_tolower_toupper.hpp  end_value_node.hpp  error_messages.hpp  file.hpp  float_end_value_node.hpp  float_node.hpp  integer_end_value_node.hpp  integer_node.hpp  key.hpp  libconfigfile.hpp  map_node.hpp  misc.hpp  node.hpp  node_concepts.hpp  node_ptr.hpp  node_types.hpp  numeral_system.hpp  parser.hpp  section_node.hpp  semantic_error.hpp  string_end_value_node.hpp  string_node.hpp  syntax_error.hpp  value_node.hpp  version.hpp
include/libconfigfile/: Makefile.am  array_node.hpp  character_constants.hpp  color.hpp  constexpr_tolower_toupper.hpp  error_messages.hpp  float_node.hpp  integer_node.hpp  libconfigfile.hpp  map_node.hpp  node.hpp  node_ptr.hpp  node_types.hpp  numeral_system.hpp  parser.hpp  string_node.hpp  syntax_error.hpp
include_install/: array_node.hpp  character_constants.hpp  color.hpp  constexpr_tolower_toupper.hpp  define_enum_flag_operators.hpp  error_messages.hpp  float_node.hpp  integer_node.hpp  libconfigfile.hpp  map_node.hpp  misc.hpp  node.hpp  node_ptr.hpp  node_types.hpp  numeral_system.hpp  parser.hpp  string_node.hpp  syntax_error.hpp  version.hpp
include_install/bits-and-bytes/: enum_flag_operators.hpp  overflow_arithmetic.hpp  unreachable_error.hpp
include_install/bits-and-bytes/define_enum_flag_operators/: define_enum_flag_operators.hpp
include_install/bits-and-bytes/overflow_arithmetic/: overflow_arithmetic.hpp
source/: array_node.cpp  color.cpp  integer_node.cpp  map_node.cpp  misc.cpp  parser.cpp  string_node.cpp
src/: Makefile.am  array_node.cpp  array_node.hpp  array_value_node.cpp  character_constants.hpp  color.cpp  config.cpp  config.hpp  end_value_node.cpp  error_messages.hpp  file.cpp  file.hpp  float_end_value_node.cpp  float_end_value_node.hpp  float_node.cpp  integer_end_value_node.cpp  integer_end_value_node.hpp  integer_node.cpp  integer_node.hpp  map_node.cpp  map_node.hpp  node.cpp  node.hpp  node_types.cpp  node_types.hpp  parser.cpp  section_node.cpp  semantic_error.cpp  string_end_value_node.cpp  string_node.cpp  syntax_error.cpp  syntax_error.hpp  value_node.cpp  value_node.hpp  version.hpp
submodules/bits-and-bytes/define_enum_flag_operators/: define_enum_flag_operators.hpp
