AM_CXXFLAGS = -std=c++20
pkglib_LTLIBRARIES = libconfigfile.la
libconfigfile_la_SOURCES =            \
	array_node.cpp                \
	array_node.hpp                \
	character_constants.hpp       \
	color.cpp                     \
	color.hpp                     \
	constexpr_tolower_toupper.hpp \
	error_messages.hpp            \
	float_node.cpp                \
	float_node.hpp                \
	integer_node.cpp              \
	integer_node.hpp              \
	libconfigfile.hpp             \
	map_node.cpp                  \
	map_node.hpp                  \
	node.cpp                      \
	node.hpp                      \
	node_ptr.hpp                  \
	node_types.cpp                \
	node_types.hpp                \
	numeral_system.hpp            \
	parser.cpp                    \
	parser.hpp                    \
	string_node.cpp               \
	string_node.hpp               \
	syntax_error.cpp              \
	syntax_error.hpp              \
	version.hpp
libconfigfile_la_CPPFLAGS = -I$(top_srcdir)/submods/bits-and-bytes/include
