AM_CXXFLAGS = -std=c++20
pkginclude_HEADERS =                  \
	array_node.hpp                \
	character_constants.hpp       \
	color.hpp                     \
	constexpr_tolower_toupper.hpp \
	error_messages.hpp            \
	float_node.hpp                \
	integer_node.hpp              \
	libconfigfile.hpp             \
	map_node.hpp                  \
	node.hpp                      \
	node_ptr.hpp                  \
	node_types.hpp                \
	numeral_system.hpp            \
	parser.hpp                    \
	string_node.hpp               \
	syntax_error.hpp              \
	version.hpp
